# python-package-exercise-project-3-team-17

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
src/am-i-fat/: calories.py  howfat.py  howfat_test.py  macros.py  macros_test.py  test_calories.py
src/amIFat/: __main__.py  calories.py  fat_problems.py  howfat.py  macros.py
src/amIFatApp/: app.py
tests/: howfat_test.py  macros_test.py  test_calories.py  test_fat_problems.py  test_howfat.py  test_macros.py
