[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amIFat"
description = "An example of a package developed with pyenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "1.0.6"
authors = [
  {name="bhavig", email="bob@hamsterdam.com" },
  {name="brian", email="brian@lee.com"},
  {name="misha", email="misha@seo.com"},
  {name="sangybaek", email="sang@ybaek.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "fitness"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-17"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-17.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-17/issues"

[project.scripts]
